@@ -1,6 +1,6 @@
 begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
 begin_comment
-comment|/*  * Copyright (c) 2004 Apple Computer, Inc.  * All rights reserved.  *  * @APPLE_BSD_LICENSE_HEADER_START@  *  * Redistribution and use in source and binary forms, with or without  * modification, are permitted provided that the following conditions  * are met:  *  * 1.  Redistributions of source code must retain the above copyright  *     notice, this list of conditions and the following disclaimer.  * 2.  Redistributions in binary form must reproduce the above copyright  *     notice, this list of conditions and the following disclaimer in the  *     documentation and/or other materials provided with the distribution.  * 3.  Neither the name of Apple Computer, Inc. ("Apple") nor the names of  *     its contributors may be used to endorse or promote products derived  *     from this software without specific prior written permission.  *  * THIS SOFTWARE IS PROVIDED BY APPLE AND ITS CONTRIBUTORS "AS IS" AND ANY  * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED  * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE  * DISCLAIMED. IN NO EVENT SHALL APPLE OR ITS CONTRIBUTORS BE LIABLE FOR ANY  * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES  * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;  * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND  * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.  *  * @APPLE_BSD_LICENSE_HEADER_END@  *  * $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/auditd.c#17 $  */
+comment|/*  * Copyright (c) 2004 Apple Computer, Inc.  * All rights reserved.  *  * @APPLE_BSD_LICENSE_HEADER_START@  *  * Redistribution and use in source and binary forms, with or without  * modification, are permitted provided that the following conditions  * are met:  *  * 1.  Redistributions of source code must retain the above copyright  *     notice, this list of conditions and the following disclaimer.  * 2.  Redistributions in binary form must reproduce the above copyright  *     notice, this list of conditions and the following disclaimer in the  *     documentation and/or other materials provided with the distribution.  * 3.  Neither the name of Apple Computer, Inc. ("Apple") nor the names of  *     its contributors may be used to endorse or promote products derived  *     from this software without specific prior written permission.  *  * THIS SOFTWARE IS PROVIDED BY APPLE AND ITS CONTRIBUTORS "AS IS" AND ANY  * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED  * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE  * DISCLAIMED. IN NO EVENT SHALL APPLE OR ITS CONTRIBUTORS BE LIABLE FOR ANY  * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES  * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;  * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND  * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.  *  * @APPLE_BSD_LICENSE_HEADER_END@  *  * $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/auditd.c#18 $  */
 end_comment
 
 begin_include
@@ -1400,6 +1400,10 @@ parameter_list|(
 name|void
 parameter_list|)
 block|{
+name|struct
+name|auditinfo
+name|ai
+decl_stmt|;
 name|int
 name|err_ret
 init|=
@@ -1451,6 +1455,84 @@ operator|=
 name|au_to_text
 argument_list|(
 literal|"auditd::Audit shutdown"
+argument_list|)
+operator|)
+operator|!=
+name|NULL
+condition|)
+name|au_write
+argument_list|(
+name|aufd
+argument_list|,
+name|tok
+argument_list|)
+expr_stmt|;
+comment|/* 		 * XXX we need to implement extended subject tokens so we can 		 * effectively represent terminal lines with this token type. 		 */
+name|bzero
+argument_list|(
+operator|&
+name|ai
+argument_list|,
+sizeof|sizeof
+argument_list|(
+name|ai
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|(
+name|tok
+operator|=
+name|au_to_subject32
+argument_list|(
+name|getuid
+argument_list|()
+argument_list|,
+name|geteuid
+argument_list|()
+argument_list|,
+name|getegid
+argument_list|()
+argument_list|,
+name|getuid
+argument_list|()
+argument_list|,
+name|getgid
+argument_list|()
+argument_list|,
+name|getpid
+argument_list|()
+argument_list|,
+name|getpid
+argument_list|()
+argument_list|,
+operator|&
+name|ai
+operator|.
+name|ai_termid
+argument_list|)
+operator|)
+operator|!=
+name|NULL
+condition|)
+name|au_write
+argument_list|(
+name|aufd
+argument_list|,
+name|tok
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|(
+name|tok
+operator|=
+name|au_to_return32
+argument_list|(
+literal|0
+argument_list|,
+literal|0
 argument_list|)
 operator|)
 operator|!=
@@ -2889,6 +2971,10 @@ parameter_list|(
 name|void
 parameter_list|)
 block|{
+name|struct
+name|auditinfo
+name|ai
+decl_stmt|;
 name|auditinfo_t
 name|auinfo
 decl_stmt|;
@@ -3018,6 +3104,62 @@ argument_list|)
 expr_stmt|;
 else|else
 block|{
+comment|/* 		 * XXXCSJP Perhaps we wan't more robust audit records for 		 * audit start up and shutdown. This might include capturing 		 * failures to initialize the audit subsystem? 		 */
+name|bzero
+argument_list|(
+operator|&
+name|ai
+argument_list|,
+sizeof|sizeof
+argument_list|(
+name|ai
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|(
+name|tok
+operator|=
+name|au_to_subject32
+argument_list|(
+name|getuid
+argument_list|()
+argument_list|,
+name|geteuid
+argument_list|()
+argument_list|,
+name|getegid
+argument_list|()
+argument_list|,
+name|getuid
+argument_list|()
+argument_list|,
+name|getgid
+argument_list|()
+argument_list|,
+name|getpid
+argument_list|()
+argument_list|,
+name|getpid
+argument_list|()
+argument_list|,
+operator|&
+name|ai
+operator|.
+name|ai_termid
+argument_list|)
+operator|)
+operator|!=
+name|NULL
+condition|)
+name|au_write
+argument_list|(
+name|aufd
+argument_list|,
+name|tok
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 operator|(
@@ -3026,6 +3168,28 @@ operator|=
 name|au_to_text
 argument_list|(
 literal|"auditd::Audit startup"
+argument_list|)
+operator|)
+operator|!=
+name|NULL
+condition|)
+name|au_write
+argument_list|(
+name|aufd
+argument_list|,
+name|tok
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|(
+name|tok
+operator|=
+name|au_to_return32
+argument_list|(
+literal|0
+argument_list|,
+literal|0
 argument_list|)
 operator|)
 operator|!=
