@@ -2245,7 +2245,6 @@ name|token_t
 modifier|*
 name|au_to_exec_args
 parameter_list|(
-specifier|const
 name|char
 modifier|*
 modifier|*
@@ -2259,7 +2258,6 @@ name|token_t
 modifier|*
 name|au_to_exec_env
 parameter_list|(
-specifier|const
 name|char
 modifier|*
 modifier|*
